Update FinSight AI features